# ray-tracer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  scene.json  utils.h
geometry/: compare.h  intersections.cpp  intersections.h  plane.h  ray.cpp  ray.h  sphere.cpp  sphere.h  utils.h  vector3.cpp  vector3.h
geometry/objects/: plane.cpp  plane.h  ray.cpp  ray.h  sphere.h
geometry/utils/: intersections.cpp  intersections.h  utils.cpp  utils.h  vector3.cpp  vector3.h
render/: camera.cpp  camera.h  color.cpp  color.h  colorable.cpp  colorable.h  colored_plane.cpp  colored_plane.h  colored_sphere.cpp  colored_sphere.h  light.cpp  light.h  pixmap.cpp  renderable.cpp  renderable.h  scene.cpp  scene.h  staic_scene.h  static_scene.cpp
render/objects/: colored_plane.cpp  colored_plane.h  colored_sphere.cpp  colored_sphere.h  light.cpp  light.h  renderable.cpp  renderable.h
render/scene/: camera.cpp  camera.h  color.h  material.cpp  material.h  pixmap.cpp  pixmap.h  renderer.cpp  renderer.h  scene.cpp  scene.h
